Don't return errors from stale host cache entries

If the cached entry is an error, it's not useful, so it's better to wait
for a result that might be a success than return the error quickly.

BUG=770773

Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I4040f95c4c1d58f657de6fd3b8157e4ae1cdab02
Reviewed-on: https://chromium-review.googlesource.com/697924
Reviewed-by: Julia Tuttle <juliatuttle@chromium.org>
Commit-Queue: Miriam Gershenson <mgersh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507440}
Former-commit-id: f87cf88e7f5600293f52d6afd9e319280a3a890d